Implemented getNewestUserLogins method